# rna-backbone-design

./: .gitignore  LICENSE  README.md  eval_se3_flows.py  inference_se3_flows.py  master_rna_install.sh  process_rna_pdb_files.py  pyproject.toml  slurmjob.sh  train_se3_flows.py
.github/workflows/: publish.yaml
camera_ready_ckpts/: config.yaml  config_flashipa.yaml  inference.yaml
configs/: config.yaml  inference.yaml
logs/slurm/: rnaff_evalsuite_rebuttals_9254033.err  rnaff_evalsuite_rebuttals_9254033.out  rnaff_evalsuite_rebuttals_9255059.err  rnaff_evalsuite_rebuttals_9255059.out
metadata/: rna_metadata.csv
rna_backbone_design/analysis/: evalsuite.py  metrics.py  utils.py
rna_backbone_design/data/: all_atom.py  complex.py  data_transforms.py  interpolant.py  nucleotide_constants.py  parsers.py  parsing.py  pdb_na_datamodule_base.py  pdb_na_dataset_base.py  protein_constants.py  rigid_utils.py  so3_utils.py  utils.py
rna_backbone_design/models/: callback.py  edge_embedder.py  flow_model.py  flow_module.py  ipa_pytorch.py  node_embedder.py  torsion_net.py  utils.py
rna_backbone_design/tools/cpp/: TMscore  USalign  qTMclust
rna_backbone_design/tools/grnade_api/: gRNAde.py  rnager_seqgen.py
rna_backbone_design/tools/grnade_api/src/: constants.py  models.py  trainer.py
rna_backbone_design/tools/grnade_api/src/data/: clustering_utils.py  data_utils.py  dataset.py  featurizer.py  sec_struct_utils.py
rna_backbone_design/tools/rhofold_api/: inference.py  mini_inf.py
rna_backbone_design/tools/rhofold_api/rhofold/: rf.py
rna_backbone_design/tools/rhofold_api/rhofold/model/: e2eformer.py  embedders.py  msa.py  outer_product_mean.py  pair.py  primitives.py  structure_module.py  triangular_attention.py  triangular_update.py
rna_backbone_design/tools/rhofold_api/rhofold/model/rna_fm/: data.py  model.py  modules.py  pretrained.py
rna_backbone_design/tools/rhofold_api/rhofold/utils/: alphabet.py  chunk_utils.py  converter.py
src/: utils.py
src/analysis/: evalsuite.py  metrics.py  utils.py
src/data/: DATA_REPR.md  all_atom.py  complex.py  data_transforms.py  interpolant.py  parsers.py  parsing.py  pdb_na_datamodule_base.py  pdb_na_dataset_base.py  protein_constants.py  utils.py
src/models/: edge_embedder.py  flow_model.py  flow_module.py  ipa_pytorch.py  node_embedder.py  utils.py
src/tools/cpp/: TMalign  TMscore  USalign  qTMclust
src/tools/grnade_api/: gRNAde.py
src/tools/grnade_api/src/: models.py  trainer.py
src/tools/grnade_api/src/data/: clustering_utils.py  data_utils.py  dataset.py  featurizer.py  sec_struct_utils.py
src/tools/rhofold_api/: inference.py  mini_inf.py
src/tools/rhofold_api/rhofold/: rf.py
src/tools/rhofold_api/rhofold/model/: e2eformer.py  embedders.py  msa.py  outer_product_mean.py  pair.py  primitives.py  structure_module.py  triangular_attention.py  triangular_update.py
src/tools/rhofold_api/rhofold/model/rna_fm/: data.py  model.py  modules.py  pretrained.py
src/tools/rhofold_api/rhofold/utils/: alphabet.py  chunk_utils.py  converter.py
